# yolov5_rk3588

./: CMakeLists.txt  README.md  build.sh
include/: postprocess.hpp  preprocess.hpp  rknn_model.hpp  rknn_pool.hpp  thread_pool.hpp
model/: best.rknn  labels_list.txt
src/: main.cpp  main_video.cpp  postprocess.cpp  preprocess.cpp  rknn_model.cpp
